--- a/package.json
+++ b/package.json
@@ -4,5 +4,16 @@
   "main": "index.js",
   "repository": "https://github.com/GBarrBrown/mental-health-dashboard.git",
   "author": "gbarrbrown <gbb7899@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "webpack --mode development"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
+  }
 }
